--- a/lib/common/Makefile.am
+++ b/lib/common/Makefile.am
@@ -25,7 +25,7 @@ noinst_HEADERS = render.h utils.h memory.h \
 	logic.h const.h macros.h htmllex.h htmltable.h pointset.h intset.h
 noinst_LTLIBRARIES = libcommon_C.la
 
-libcommon_C_la_SOURCES = arrows.c colxlate.c ellipse.c textfont.c \
+libcommon_C_la_SOURCES = arrows.c colxlate.c ellipse.c textspan.c \
 	args.c memory.c globals.c htmllex.c htmlparse.y htmltable.c input.c \
 	pointset.c intset.c postproc.c routespl.c splines.c psusershape.c \
 	timing.c labels.c ns.c shapes.c utils.c geom.c taper.c \
