Fix windows build files to adjust to new font dictionary: change fontmetrics.c in both release and debug lists; remove deleted font functions and alphabetize the list

--- a/lib/gvc.vcproj
+++ b/lib/gvc.vcproj
@@ -317,7 +317,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\common\fontmetrics.c"
+				RelativePath=".\common\textspan.c"
 				>
 			</File>
 			<File
