--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -162,7 +162,7 @@ BuildRequires: R-devel swig >= 1.3.33 perl-libs
 BuildRequires: libwebp-devel
 %endif
 %if %fedora >= 20
-%define GO 1
+%define GOLANG 1
 BuildRequires: golang
 %endif
 %endif
@@ -533,7 +533,7 @@ C# extension for graphviz.
 %endif
 
 #-- graphviz-lang-go rpm --------------------------------------------
-%if 0%{?GO}
+%if 0%{?GOLANG}
 %package lang-go
 Group:          Applications/Multimedia
 Summary:        GO extension for graphviz
@@ -547,7 +547,7 @@ Guile extension for graphviz.
 %defattr(-,root,root,-)
 %dir %{_libdir}/graphviz/go
 %{_libdir}/graphviz/go/*
-%{_mandir}/man3/*.3.guile.*
+%{_mandir}/man3/*.3go.*
 %endif
 
 #-- graphviz-lang-guile rpm --------------------------------------------
@@ -862,7 +862,7 @@ CFLAGS="$RPM_OPT_FLAGS" \
         --disable-static \
         --disable-dependency-tracking \
         --enable-sharp%{!?SHARP:=no} \
-        --enable-go%{!?GO:=no} \
+        --enable-go%{!?GOLANG:=no} \
         --enable-guile%{!?GUILE:=no} \
         --enable-io%{!?_IO:=no} \
         --enable-java%{!?JAVA:=no} \
