--- a/tclpkg/gv/Makefile.am
+++ b/tclpkg/gv/Makefile.am
@@ -48,10 +48,10 @@ gvgotest: gv.i gvgotest.go
 	$(SED) -e 's/#include "gvc.h"/#include <graphviz\/gvc.h>/' -e 's/DEMAND_LOADING/1/' <$(srcdir)/gv.cpp >go/src/gv/gv.cpp; \
 	echo "package gv" >go/src/gv/gv.go; \
 	cat $(srcdir)/gvgotest.go >go/src/gvgotest.go; \
-	export GOROOT=/home/ellson/FIX/Linux.x86_64/build/go; \
-	export GOPATH=/home/ellson/FIX/Linux.x86_64/build/graphviz/tclpkg/gv/go ;\
 	cd go/src; \
-	$(GOROOT)/bin/go build -x -work -gccgoflags '-lgvc' -compiler gccgo gvgotest.go && mv gvgotest ../../; \
+	GOROOT=/home/ellson/FIX/Linux.x86_64/build/go \
+	GOPATH=/home/ellson/FIX/Linux.x86_64/build/graphviz/tclpkg/gv/go \
+	/home/ellson/FIX/Linux.x86_64/build/go/bin/go build -x -work -gccgoflags -lgvc -compiler gccgo gvgotest.go && mv gvgotest ../../; \
 	)
 
 pkgguiledir = $(pkglibdir)/guile
