added generation of sfdp linkable library

--- a/configure.ac
+++ b/configure.ac
@@ -3186,6 +3186,7 @@ AC_CONFIG_FILES(Makefile
 	lib/mingle/Makefile
 	lib/label/Makefile
 	lib/sfdpgen/Makefile
+	lib/sfdpgen/libsfdp.pc
 	lib/osage/Makefile
 	lib/gvpr/Makefile
 	lib/gvpr/libgvpr.pc
