added color_palette.c which contains additional colors from ColorBrewer. Changed color_palette.h so that palettes are now external and defined in color_palette.c

--- a/lib/sparse/Makefile.am
+++ b/lib/sparse/Makefile.am
@@ -13,6 +13,6 @@ noinst_HEADERS = SparseMatrix.h general.h BinaryHeap.h IntStack.h vector.h DotIO
 noinst_LTLIBRARIES = libsparse_C.la
 
 libsparse_C_la_SOURCES = SparseMatrix.c general.c BinaryHeap.c IntStack.c vector.c DotIO.c \
-    LinkedList.c colorutil.c mq.c clustering.c
+    LinkedList.c colorutil.c color_palette.c mq.c clustering.c
 
 EXTRA_DIST = Makefile.old gvsparse.vcproj
