Add new C file to sparse library build.

--- a/lib/sparse/gvsparse.vcproj
+++ b/lib/sparse/gvsparse.vcproj
@@ -177,6 +177,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\color_palette.c"
+				>
+			</File>
+			<File
 				RelativePath=".\colorutil.c"
 				>
 			</File>
