Set libdir to lib64 on ppc64le
Signed-off-by: Dinar Valeev <dvaleev@suse.com>

--- a/configure.ac
+++ b/configure.ac
@@ -107,7 +107,7 @@ if test -z "$LIBPOSTFIX"; then
   case "${host_os}" in
     *linux* )
       case "${host_cpu}" in
-        aarch64 | powerpc64 | s390x | x86_64 | sparc64 )
+        aarch64 | powerpc64 | powerpc64le | s390x | x86_64 | sparc64 )
           LIBPOSTFIX="64"
           ;;
       esac
