--- a/tclpkg/gdtclft/Makefile.am
+++ b/tclpkg/gdtclft/Makefile.am
@@ -50,7 +50,7 @@ endif
 gdtclft.3tcl.pdf: $(srcdir)/gdtclft.3tcl
 	- @GROFF@ -Tps -man $(srcdir)/gdtclft.3tcl | @PS2PDF@ - - >gdtclft.3tcl.pdf
 
-EXTRA_DIST = $(man) $(pdf) Makefile.old
+EXTRA_DIST = $(man) $(pdf)
 
 CLEANFILES = pkgIndex.tcl
 
