--- a/tclpkg/tcldot/Makefile.am
+++ b/tclpkg/tcldot/Makefile.am
@@ -112,7 +112,7 @@ endif
 tcldot.3tcl.pdf: $(srcdir)/tcldot.3tcl
 	- $(GROFF) -Tps -man $(srcdir)/tcldot.3tcl | $(PS2PDF) - - >tcldot.3tcl.pdf
 
-EXTRA_DIST = $(man) $(pdf) $(html) README README.Tkspline Makefile.old
+EXTRA_DIST = $(man) $(pdf) $(html) README README.Tkspline
 
 CLEANFILES = pkgIndex.tcl
 
