--- a/lib/common/Makefile.am
+++ b/lib/common/Makefile.am
@@ -71,7 +71,7 @@ y.output: $(top_srcdir)/lib/common/htmlparse.y
 DISTCLEANFILES = brewer_lib color_lib colortbl.h ps_font_equiv.h \
 	y.output y.tab.[ch] htmlparse.[ch]
 
-EXTRA_DIST = Makefile.old README.imap chars.tcl ps_font_equiv.h \
+EXTRA_DIST = README.imap chars.tcl ps_font_equiv.h \
 	strcasecmp.c strncasecmp.c htmlparse.c htmlparse.h \
 	y.tab.c y.tab.h y.output entities.html entities.tcl \
 	brewer_colors brewer_lib svgcolor_names svgcolor_lib \
