--- a/lib/graph/Makefile.am
+++ b/lib/graph/Makefile.am
@@ -47,7 +47,7 @@ graph.3.pdf: $(srcdir)/graph.3
 	- @GROFF@ -Tps -man $(srcdir)/graph.3 | @PS2PDF@ - - > graph.3.pdf
 
 EXTRA_DIST = $(man_MANS) $(pdf_DATA) triefa.cP \
-	Makefile.old parser.c parser.h \
+	parser.c parser.h \
 	y.tab.c y.tab.h y.output graph.vcproj graph.def
 
 DISTCLEANFILES = y.output parser.c parser.h y.tab.[ch] $(pdf_DATA)
