--- a/cmd/Makefile.am
+++ b/cmd/Makefile.am
@@ -1,4 +1,4 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = dot tools gvpr lefty lneato dotty smyrna gvmap gvedit mingle
+SUBDIRS = dot tools gvpr lefty lneato dotty smyrna gvmap gvedit mingle edgepaint
