--- a/lib/sfdpgen/Makefile.am
+++ b/lib/sfdpgen/Makefile.am
@@ -16,7 +16,7 @@ AM_CPPFLAGS = \
 noinst_HEADERS = sfdpinternal.h spring_electrical.h \
 	sparse_solve.h post_process.h \
 	stress_model.h uniform_stress.h \
-	QuadTree.h Multilevel.h sfdp.h PriorityQueue.h 
+	Multilevel.h sfdp.h PriorityQueue.h 
 
 if WITH_SFDP
 noinst_LTLIBRARIES = libsfdpgen_C.la
@@ -25,6 +25,6 @@ endif
 libsfdpgen_C_la_SOURCES = sfdpinit.c spring_electrical.c \
 	sparse_solve.c post_process.c \
 	stress_model.c uniform_stress.c \
-	QuadTree.c Multilevel.c PriorityQueue.c
+	Multilevel.c PriorityQueue.c
 
 EXTRA_DIST = sfdp.vcproj
