Further processing of Yifan's edge painting code: add copyright notice to new source files and #ifndefs to .h files; update gvmap to use color_schemes; pull valid color scheme name test from main programs and make a function in the color_palette library.

--- a/cmd/gvmap/Makefile.am
+++ b/cmd/gvmap/Makefile.am
@@ -11,6 +11,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/neatogen \
 	-I$(top_srcdir)/lib/sfdpgen \
 	-I$(top_srcdir)/lib/sparse \
+	-I$(top_srcdir)/lib/edgepaint \
 	-I$(top_srcdir)/lib/cgraph \
 	-I$(top_srcdir)/lib/ingraphs \
 	-I$(top_srcdir)/lib/cdt
@@ -31,6 +32,7 @@ gvmap_CPPFLAGS = $(AM_CPPFLAGS)
 cluster_CPPFLAGS = $(AM_CPPFLAGS) -g
 
 gvmap_LDADD = \
+	$(top_builddir)/lib/edgepaint/libedgepaint_C.la \
 	$(top_builddir)/lib/sfdpgen/libsfdpgen_C.la \
 	$(top_builddir)/lib/neatogen/libneatogen_C.la \
 	$(top_builddir)/lib/sparse/libsparse_C.la \
@@ -41,6 +43,7 @@ gvmap_LDADD = \
 	$(GTS_LIBS) -lm
 
 cluster_LDADD = \
+	$(top_builddir)/lib/edgepaint/libedgepaint_C.la \
 	$(top_builddir)/lib/sfdpgen/libsfdpgen_C.la \
 	$(top_builddir)/lib/neatogen/libneatogen_C.la \
 	$(top_builddir)/lib/sparse/libsparse_C.la \
